<resources>
    <string name="app_name">ArticlesApp</string>
    <string name="articles_toolbar">Articles</string>
    <string name="add_article">Add article</string>
    <string name="article_author_hint">Author</string>
    <string name="article_title_hint">Title</string>
    <string name="article_description_hint">Description</string>
    <string name="save_button">Save</string>
    <string name="article_details">Article details</string>
    <string name="edit_article">Edit article</string>
    <string name="save_changes_button">Save changes</string>
    <string name="no_data_recycler">No data</string>
    <string name="alert_dialog_text">Are you sure you want to delete this article?</string>
    <string name="blank_field">Blank field!</string>
    <string name="new_article_added">You added new article!</string>
    <string name="author_details">Author: %s</string>
    <string name="type_description">Type: %s</string>
    <string name="constant_id">id</string>
    <string name="no_article">No valid article</string>
    <string name="result_intent_error">You haven\'t send anything!</string>
    <string name="prvi_fragment">Welcome to ArticlesApp!</string>
    <string name="drugi_fragment">This is app where you can read articles and add new articles. If you want to add new article, you have to press "+" button on the bottom right corner. You have to enter all fields to make new article</string>
    <string name="treci_fragment">If everything is ok, press right button to enter app, if not, press back button to read tutorial again</string>

    <string-array name="spinner_item">
        <item>Politics</item>
        <item>Sport</item>
        <item>Development</item>
        <item>Other</item>
    </string-array>
</resources>
